# FaceSync

./: CMakeLists.txt  FaceSync.cpp  README.md  config.ini
data/: cameras.txt
include/: Body.cpp  Body.h  Eye.cpp  Eye.h  Face.cpp  Face.h  Feature.cpp  Image.cpp  Image.h  People.cpp  People.h
include/detect/: Body.cpp  Body.h  Eye.cpp  Eye.h  Eyes.cpp  Eyes.h  Face.cpp  Face.h  Feature.cpp  Feature.h  Image.cpp  Image.h  People.cpp  People.h
include/device/: CCTV.cpp  CCTV.h  Camera.h  Config.cpp  Config.h  Display.cpp  Display.h  Log.cpp  Log.h  Stream.cpp  Stream.h
logs/: log.txt
test/: gtest.cpp  gtest_incompatible.cpp  server.py
